tests/NormalTests/paczka1/fuzzy1/45988937.err
Error in line 12: S546 A318 73,1
Error in line 19: 7cTy A318 96,3
Error in line 16: FHRwAG S546 32,3
Error in line 11: WVeAudvW A361 91,8
Error in line 30: hriP S532 37,6
Error in line 32: 45s S532 91,3
